# pbtm-project

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: quality-gate.yml
configs/analyzer/: rule_registry.yaml  table_mapping.yaml
configs/parser/: fail_soft.yaml
docs/: MAINTENANCE_IMPROVEMENT_PLAN.md  PRD.md  PROJECT_STRUCTURE.md  STACK_VALIDATION.md  TRD.md  USER_MANUAL.md  WBS.md
docs/reports/: PROJECT_ANALYSIS_REPORT.md
docs/runbooks/: OPERATIONS.md
manual/: COMMAND_REFERENCE.md  QUICK_START.md  USER_GUIDE.md
sql/indexes/: 002_indexes.sql
sql/schema/: 001_init.sql
src/pb_analyzer/: __main__.py
src/pb_analyzer/analyzer/: __init__.py  service.py
src/pb_analyzer/cli/: __init__.py  parser.py
src/pb_analyzer/common/: __init__.py  exceptions.py  models.py
src/pb_analyzer/dashboard/: __init__.py  service.py
src/pb_analyzer/extractor/: __init__.py  adapter.py  manifest.py
src/pb_analyzer/observability/: __init__.py  logging.py
src/pb_analyzer/parser/: __init__.py  service.py
src/pb_analyzer/pipeline/: __init__.py  service.py
src/pb_analyzer/reporter/: __init__.py  service.py
src/pb_analyzer/rules/: RULE_REGISTRY.md  __init__.py  loader.py  models.py
src/pb_analyzer/storage/: __init__.py  differ.py  (+1 more)
tests/unit/: test_cli_diff.py  test_cli_main.py  test_dashboard.py  test_data_window.py  test_diff.py  test_extractor_adapter.py  test_golden_metrics.py  test_observability.py  test_parser_analyzer.py  test_rules.py  test_storage_reporter.py
tools/ci/: check_golden_metrics.py  generate_golden_metrics.py  quality_gate.sh
(+22 files in other folders)
